--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "test2",
+  "name": "taketake",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.1",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +15,18 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@web3-onboard/core": "^2.14.0",
+    "@web3-onboard/injected-wallets": "^2.6.1",
+    "@web3-onboard/react": "^2.5.4",
+    "axios": "^1.2.5",
+    "chess.js": "^0.12.0",
+    "classnames": "^2.3.2",
+    "ethers": "^5.7.2",
+    "framer-motion": "^8.5.5",
     "react": "^18.2.0",
+    "react-chessboard": "^2.0.8",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -39,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/chess.js": "^0.13.4",
+    "tailwindcss": "^3.2.4"
   }
 }
