--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.2.5",
     "chess.js": "^0.12.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^8.5.5",
     "react": "^18.2.0",
@@ -56,8 +57,10 @@
     ]
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/chess.js": "^0.13.4",
+    "hardhat": "^2.12.7",
     "tailwindcss": "^3.2.4"
   }
 }
