--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@web3-onboard/core": "^2.14.0",
     "@web3-onboard/injected-wallets": "^2.6.1",
     "@web3-onboard/react": "^2.5.4",
+    "aws-amplify": "^5.0.16",
     "axios": "^1.2.5",
     "chess.js": "^0.12.0",
     "classnames": "^2.3.2",
