--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.12.1",
     "@aws-amplify/ui-react": "^4.3.9",
+    "@aws-sdk/client-cognito-identity": "^3.298.0",
     "@aws-sdk/client-gamelift": "^3.295.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.298.0",
+    "@aws-sdk/types": "^3.296.0",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -22,7 +25,7 @@
     "@web3-onboard/injected-wallets": "^2.6.1",
     "@web3-onboard/react": "^2.5.4",
     "aws-amplify": "^5.0.17",
-    "axios": "^1.2.5",
+    "axios": "^1.3.4",
     "chess.js": "^0.12.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
