--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.298.0",
     "@aws-sdk/types": "^3.296.0",
     "@chakra-ui/react": "^2.4.9",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
     "@headlessui/react": "^1.7.7",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
