--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@auth0/auth0-react": "^1.12.1",
     "@aws-amplify/ui-react": "^4.3.9",
     "@aws-sdk/client-cognito-identity": "^3.298.0",
+    "@aws-sdk/client-dynamodb": "^3.332.0",
+    "@aws-sdk/client-dynamodb-streams": "^3.329.0",
     "@aws-sdk/client-gamelift": "^3.295.0",
     "@aws-sdk/client-sns": "^3.319.0",
     "@aws-sdk/client-sqs": "^3.306.0",
