--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "@auth0/auth0-react": "^1.12.1",
     "@aws-amplify/ui-react": "^4.3.9",
     "@aws-sdk/client-cognito-identity": "^3.298.0",
-    "@aws-sdk/client-dynamodb": "^3.332.0",
+    "@aws-sdk/client-dynamodb": "^3.345.0",
     "@aws-sdk/client-dynamodb-streams": "^3.329.0",
     "@aws-sdk/client-gamelift": "^3.295.0",
     "@aws-sdk/client-sns": "^3.319.0",
     "@aws-sdk/client-sqs": "^3.306.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.298.0",
     "@aws-sdk/types": "^3.296.0",
+    "@bity/oauth2-auth-code-pkce": "^2.13.0",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -43,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "snabbdom": "^3.5.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
