--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.12.1",
     "@aws-amplify/ui-react": "^4.3.9",
-    "@aws-sdk/client-cognito-identity": "^3.298.0",
+    "@aws-sdk/client-cognito-identity": "^3.363.0",
     "@aws-sdk/client-dynamodb": "^3.345.0",
     "@aws-sdk/client-dynamodb-streams": "^3.329.0",
     "@aws-sdk/client-gamelift": "^3.295.0",
     "@aws-sdk/client-sns": "^3.319.0",
     "@aws-sdk/client-sqs": "^3.306.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.298.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.363.0",
     "@aws-sdk/types": "^3.296.0",
     "@bity/oauth2-auth-code-pkce": "^2.13.0",
     "@chakra-ui/react": "^2.4.9",
@@ -34,6 +34,7 @@
     "@web3-onboard/injected-wallets": "^2.6.1",
     "@web3-onboard/react": "^2.5.4",
     "aws-amplify": "^5.0.17",
+    "aws-sdk": "^2.1409.0",
     "axios": "^1.3.4",
     "chess.js": "^0.12.0",
     "classnames": "^2.3.2",
@@ -44,16 +45,14 @@
     "react-chessboard": "^2.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
     "snabbdom": "^3.5.1",
-    "typescript": "^4.9.4",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -77,7 +76,11 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/chess.js": "^0.13.4",
+    "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.14",
     "hardhat": "^2.12.7",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9"
   }
 }
