--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["vite/client"]
   },
   "include": [
     "src",
     "chain"
-  ],
-  "exclude": [
-    "src/gamelift-realtime-client/*"
   ]
 }
